Dark mode button was not working when page is scolled to bottom - fixed

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ header > h1 {
 
 .panel-footer {
   border-top: 0;
-  position: relative;
+  position: initial;
   left: 0;
   bottom: 0;
   width: 100%;
